--- a/testsuite/hdf4/S2000415.hdf.html
+++ b/testsuite/hdf4/S2000415.hdf.html
@@ -339,30 +339,30 @@ DODS_URL = new dods_url("http://localhost:8080/opendap/data/hdf/S2000415.hdf");
 <td align="right" valign="top"><h3>
 <a href="opendap_form_help.html#global_attr" target="help">Global Attributes:</a></h3>
 <td><textarea name="global_attr" rows="5" cols="70">
-HDF_GLOBAL.Producer_Agency: "NASA\\000"
-HDF_GLOBAL.Producer_Institution: "JPL\\000"
-HDF_GLOBAL.Sensor_Name: "NSCAT\\000"
-HDF_GLOBAL.Project_ID: "NSCAT\\000"
-HDF_GLOBAL.SIS_ID: "597-512-24/1996-07-01\\000"
-HDF_GLOBAL.Build_ID: "3.2.1/1996-11-05\\000"
-HDF_GLOBAL.ADEOS_Data_Package_ID: "S2\\000"
-HDF_GLOBAL.ADEOS_Data_Package_Type: "S\\000"
-HDF_GLOBAL.Product_Creation_Time: "1996-318T01:35:16.000\\000"
-HDF_GLOBAL.Data_Type: "L2\\000"
-HDF_GLOBAL.Data_Status: "COMPLETE\\000"
+HDF_GLOBAL.Producer_Agency: NASA\\000
+HDF_GLOBAL.Producer_Institution: JPL\\000
+HDF_GLOBAL.Sensor_Name: NSCAT\\000
+HDF_GLOBAL.Project_ID: NSCAT\\000
+HDF_GLOBAL.SIS_ID: 597-512-24/1996-07-01\\000
+HDF_GLOBAL.Build_ID: 3.2.1/1996-11-05\\000
+HDF_GLOBAL.ADEOS_Data_Package_ID: S2\\000
+HDF_GLOBAL.ADEOS_Data_Package_Type: S\\000
+HDF_GLOBAL.Product_Creation_Time: 1996-318T01:35:16.000\\000
+HDF_GLOBAL.Data_Type: L2\\000
+HDF_GLOBAL.Data_Status: COMPLETE\\000
 HDF_GLOBAL.First_Rev_Number: 415
-HDF_GLOBAL.First_Rev_Eq_Crossing_Time: "1996-259T04:01:28.226\\000"
+HDF_GLOBAL.First_Rev_Eq_Crossing_Time: 1996-259T04:01:28.226\\000
 HDF_GLOBAL.First_Rev_Eq_Crossing_Lon: 279.983
-HDF_GLOBAL.First_Data_Time: "1996-259T03:43:48.945\\000"
-HDF_GLOBAL.Last_Data_Time: "1996-259T05:09:48.997\\000"
+HDF_GLOBAL.First_Data_Time: 1996-259T03:43:48.945\\000
+HDF_GLOBAL.Last_Data_Time: 1996-259T05:09:48.997\\000
 HDF_GLOBAL.Num_Expected_Output_Records: 458
 HDF_GLOBAL.Num_Actual_Output_Records: 458
-HDF_GLOBAL.Ambig_Removal_Method: "Baseline used\\000"
-HDF_GLOBAL.HDF_Build_ID: "JPL D-xxxxx 12/15/94\\000"
-HDF_GLOBAL.HDF_SIS_ID: "JPL D-12060 12/15/94\\000"
-HDF_GLOBAL.HDF_Conversion_Organization: "JPL PO.DAAC\\000"
-HDF_GLOBAL.HDF_Conversion_Time: "1996-320T17:32:34       "
-HDF_GLOBAL.Data_Format_Type: "HDF\\000"
+HDF_GLOBAL.Ambig_Removal_Method: Baseline used\\000
+HDF_GLOBAL.HDF_Build_ID: JPL D-xxxxx 12/15/94\\000
+HDF_GLOBAL.HDF_SIS_ID: JPL D-12060 12/15/94\\000
+HDF_GLOBAL.HDF_Conversion_Organization: JPL PO.DAAC\\000
+HDF_GLOBAL.HDF_Conversion_Time: 1996-320T17:32:34       
+HDF_GLOBAL.Data_Format_Type: HDF\\000
 </textarea><p>
 
 <tr><td><td><hr>
@@ -397,18 +397,18 @@ org_opendap_NSCAT_Rev_20_WVC_Lat.add_dim(24);
 <br>
 
 <textarea name="WVC_Lat_attr" rows="5" cols="70">
-long_name: "latitude"
-units: "deg"
+long_name: latitude
+units: deg
 scale_factor: 0.01
 scale_factor_err: 0
 add_offset: 0
 add_offset_err: 0
 calibrated_nt: 22
 valid_range: -9000, 7771
-dim_0.name: "row"
-dim_0.long_name: "WVC row"
-dim_1.name: "WVC"
-dim_1.long_name: "WVC index"
+dim_0.name: row
+dim_0.long_name: WVC row
+dim_1.name: WVC
+dim_1.long_name: WVC index
 </textarea>
 
 <p><p>
@@ -437,18 +437,18 @@ org_opendap_NSCAT_Rev_20_WVC_Lon.add_dim(24);
 <br>
 
 <textarea name="WVC_Lon_attr" rows="5" cols="70">
-long_name: "longitude"
-units: "deg"
+long_name: longitude
+units: deg
 scale_factor: 0.01
 scale_factor_err: 0
 add_offset: 0
 add_offset_err: 0
 calibrated_nt: 22
 valid_range: 0, 31242
-dim_0.name: "row"
-dim_0.long_name: "WVC row"
-dim_1.name: "WVC"
-dim_1.long_name: "WVC index"
+dim_0.name: row
+dim_0.long_name: WVC row
+dim_1.name: WVC
+dim_1.long_name: WVC index
 </textarea>
 
 <p><p>
@@ -477,18 +477,18 @@ org_opendap_NSCAT_Rev_20_Num_Sigma0.add_dim(24);
 <br>
 
 <textarea name="Num_Sigma0_attr" rows="5" cols="70">
-long_name: "The total number of sigma-0 measurements"
-units: "counts"
+long_name: The total number of sigma-0 measurements
+units: counts
 scale_factor: 1
 scale_factor_err: 0
 add_offset: 0
 add_offset_err: 0
 calibrated_nt: 21
 valid_range: 0, 19
-dim_0.name: "row"
-dim_0.long_name: "WVC row"
-dim_1.name: "WVC"
-dim_1.long_name: "WVC index"
+dim_0.name: row
+dim_0.long_name: WVC row
+dim_1.name: WVC
+dim_1.long_name: WVC index
 </textarea>
 
 <p><p>
@@ -517,18 +517,18 @@ org_opendap_NSCAT_Rev_20_Num_Beam_12.add_dim(24);
 <br>
 
 <textarea name="Num_Beam_12_attr" rows="5" cols="70">
-long_name: "The total number of sigma-0s received from beam 1 or 2"
-units: "counts"
+long_name: The total number of sigma-0s received from beam 1 or 2
+units: counts
 scale_factor: 1
 scale_factor_err: 0
 add_offset: 0
 add_offset_err: 0
 calibrated_nt: 21
 valid_range: 0, 6
-dim_0.name: "row"
-dim_0.long_name: "WVC row"
-dim_1.name: "WVC"
-dim_1.long_name: "WVC index"
+dim_0.name: row
+dim_0.long_name: WVC row
+dim_1.name: WVC
+dim_1.long_name: WVC index
 </textarea>
 
 <p><p>
@@ -557,18 +557,18 @@ org_opendap_NSCAT_Rev_20_Num_Beam_34.add_dim(24);
 <br>
 
 <textarea name="Num_Beam_34_attr" rows="5" cols="70">
-long_name: "The total number of sigma-0s received from beam 3 or 4"
-units: "counts"
+long_name: The total number of sigma-0s received from beam 3 or 4
+units: counts
 scale_factor: 1
 scale_factor_err: 0
 add_offset: 0
 add_offset_err: 0
 calibrated_nt: 21
 valid_range: 0, 6
-dim_0.name: "row"
-dim_0.long_name: "WVC row"
-dim_1.name: "WVC"
-dim_1.long_name: "WVC index"
+dim_0.name: row
+dim_0.long_name: WVC row
+dim_1.name: WVC
+dim_1.long_name: WVC index
 </textarea>
 
 <p><p>
@@ -597,18 +597,18 @@ org_opendap_NSCAT_Rev_20_Num_Beam_56.add_dim(24);
 <br>
 
 <textarea name="Num_Beam_56_attr" rows="5" cols="70">
-long_name: "The total number of sigma-0s received from beam 5 or 6"
-units: "counts"
+long_name: The total number of sigma-0s received from beam 5 or 6
+units: counts
 scale_factor: 1
 scale_factor_err: 0
 add_offset: 0
 add_offset_err: 0
 calibrated_nt: 21
 valid_range: 0, 6
-dim_0.name: "row"
-dim_0.long_name: "WVC row"
-dim_1.name: "WVC"
-dim_1.long_name: "WVC index"
+dim_0.name: row
+dim_0.long_name: WVC row
+dim_1.name: WVC
+dim_1.long_name: WVC index
 </textarea>
 
 <p><p>
@@ -637,18 +637,18 @@ org_opendap_NSCAT_Rev_20_Num_Beam_78.add_dim(24);
 <br>
 
 <textarea name="Num_Beam_78_attr" rows="5" cols="70">
-long_name: "The total number of sigma-0s received from beam 7 or 8"
-units: "counts"
+long_name: The total number of sigma-0s received from beam 7 or 8
+units: counts
 scale_factor: 1
 scale_factor_err: 0
 add_offset: 0
 add_offset_err: 0
 calibrated_nt: 21
 valid_range: 0, 6
-dim_0.name: "row"
-dim_0.long_name: "WVC row"
-dim_1.name: "WVC"
-dim_1.long_name: "WVC index"
+dim_0.name: row
+dim_0.long_name: WVC row
+dim_1.name: WVC
+dim_1.long_name: WVC index
 </textarea>
 
 <p><p>
@@ -677,17 +677,17 @@ org_opendap_NSCAT_Rev_20_WVC_Quality_Flag.add_dim(24);
 <br>
 
 <textarea name="WVC_Quality_Flag_attr" rows="5" cols="70">
-long_name: "WVC Quality Flag"
+long_name: WVC Quality Flag
 scale_factor: 1
 scale_factor_err: 0
 add_offset: 0
 add_offset_err: 0
 calibrated_nt: 21
 valid_range: 0, 3
-dim_0.name: "row"
-dim_0.long_name: "WVC row"
-dim_1.name: "WVC"
-dim_1.long_name: "WVC index"
+dim_0.name: row
+dim_0.long_name: WVC row
+dim_1.name: WVC
+dim_1.long_name: WVC index
 </textarea>
 
 <p><p>
@@ -716,18 +716,18 @@ org_opendap_NSCAT_Rev_20_Mean_Wind.add_dim(24);
 <br>
 
 <textarea name="Mean_Wind_attr" rows="5" cols="70">
-long_name: "Mean Wind Speed"
-units: "m/s"
+long_name: Mean Wind Speed
+units: m/s
 scale_factor: 0.01
 scale_factor_err: 0
 add_offset: 0
 add_offset_err: 0
 calibrated_nt: 23
 valid_range: 0, 2374
-dim_0.name: "row"
-dim_0.long_name: "WVC row"
-dim_1.name: "WVC"
-dim_1.long_name: "WVC index"
+dim_0.name: row
+dim_0.long_name: WVC row
+dim_1.name: WVC
+dim_1.long_name: WVC index
 </textarea>
 
 <p><p>
@@ -762,20 +762,20 @@ org_opendap_NSCAT_Rev_20_Wind_Speed.add_dim(4);
 <br>
 
 <textarea name="Wind_Speed_attr" rows="5" cols="70">
-long_name: "Wind speed associated with a WVC"
-units: "m/s"
+long_name: Wind speed associated with a WVC
+units: m/s
 scale_factor: 0.01
 scale_factor_err: 0
 add_offset: 0
 add_offset_err: 0
 calibrated_nt: 23
 valid_range: 0, 2571
-dim_0.name: "row"
-dim_0.long_name: "WVC row"
-dim_1.name: "WVC"
-dim_1.long_name: "WVC index"
-dim_2.name: "position"
-dim_2.long_name: "position of the ambiguities"
+dim_0.name: row
+dim_0.long_name: WVC row
+dim_1.name: WVC
+dim_1.long_name: WVC index
+dim_2.name: position
+dim_2.long_name: position of the ambiguities
 </textarea>
 
 <p><p>
@@ -810,20 +810,20 @@ org_opendap_NSCAT_Rev_20_Wind_Dir.add_dim(4);
 <br>
 
 <textarea name="Wind_Dir_attr" rows="5" cols="70">
-long_name: "Wind direction solution associated with a WVC"
-units: "deg"
+long_name: Wind direction solution associated with a WVC
+units: deg
 scale_factor: 0.01
 scale_factor_err: 0
 add_offset: 0
 add_offset_err: 0
 calibrated_nt: 23
 valid_range: 0, 35997
-dim_0.name: "row"
-dim_0.long_name: "WVC row"
-dim_1.name: "WVC"
-dim_1.long_name: "WVC index"
-dim_2.name: "position"
-dim_2.long_name: "position of the ambiguities"
+dim_0.name: row
+dim_0.long_name: WVC row
+dim_1.name: WVC
+dim_1.long_name: WVC index
+dim_2.name: position
+dim_2.long_name: position of the ambiguities
 </textarea>
 
 <p><p>
@@ -858,20 +858,20 @@ org_opendap_NSCAT_Rev_20_Error_Speed.add_dim(4);
 <br>
 
 <textarea name="Error_Speed_attr" rows="5" cols="70">
-long_name: "Uncertainty estimated for the wind speed value"
-units: "m/s"
+long_name: Uncertainty estimated for the wind speed value
+units: m/s
 scale_factor: 0.01
 scale_factor_err: 0
 add_offset: 0
 add_offset_err: 0
 calibrated_nt: 23
 valid_range: 0, 2410
-dim_0.name: "row"
-dim_0.long_name: "WVC row"
-dim_1.name: "WVC"
-dim_1.long_name: "WVC index"
-dim_2.name: "position"
-dim_2.long_name: "position of the ambiguities"
+dim_0.name: row
+dim_0.long_name: WVC row
+dim_1.name: WVC
+dim_1.long_name: WVC index
+dim_2.name: position
+dim_2.long_name: position of the ambiguities
 </textarea>
 
 <p><p>
@@ -906,20 +906,20 @@ org_opendap_NSCAT_Rev_20_Error_Dir.add_dim(4);
 <br>
 
 <textarea name="Error_Dir_attr" rows="5" cols="70">
-long_name: "Uncertainty estimated for the wind direction value"
-units: "deg"
+long_name: Uncertainty estimated for the wind direction value
+units: deg
 scale_factor: 0.01
 scale_factor_err: 0
 add_offset: 0
 add_offset_err: 0
 calibrated_nt: 23
 valid_range: 0, 2435
-dim_0.name: "row"
-dim_0.long_name: "WVC row"
-dim_1.name: "WVC"
-dim_1.long_name: "WVC index"
-dim_2.name: "position"
-dim_2.long_name: "position of the ambiguities"
+dim_0.name: row
+dim_0.long_name: WVC row
+dim_1.name: WVC
+dim_1.long_name: WVC index
+dim_2.name: position
+dim_2.long_name: position of the ambiguities
 </textarea>
 
 <p><p>
@@ -954,19 +954,19 @@ org_opendap_NSCAT_Rev_20_MLE_Likelihood.add_dim(4);
 <br>
 
 <textarea name="MLE_Likelihood_attr" rows="5" cols="70">
-long_name: "Relative likelihood that a given win vector solution is correct"
+long_name: Relative likelihood that a given win vector solution is correct
 scale_factor: 0.1
 scale_factor_err: 0
 add_offset: 0
 add_offset_err: 0
 calibrated_nt: 22
 valid_range: -32768, 2825
-dim_0.name: "row"
-dim_0.long_name: "WVC row"
-dim_1.name: "WVC"
-dim_1.long_name: "WVC index"
-dim_2.name: "position"
-dim_2.long_name: "position of the ambiguities"
+dim_0.name: row
+dim_0.long_name: WVC row
+dim_1.name: WVC
+dim_1.long_name: WVC index
+dim_2.name: position
+dim_2.long_name: position of the ambiguities
 </textarea>
 
 <p><p>
@@ -995,18 +995,18 @@ org_opendap_NSCAT_Rev_20_Num_Ambigs.add_dim(24);
 <br>
 
 <textarea name="Num_Ambigs_attr" rows="5" cols="70">
-long_name: "Number of ambiguous wind vectors reported for a given cell"
-units: "counts"
+long_name: Number of ambiguous wind vectors reported for a given cell
+units: counts
 scale_factor: 1
 scale_factor_err: 0
 add_offset: 0
 add_offset_err: 0
 calibrated_nt: 21
 valid_range: 0, 4
-dim_0.name: "row"
-dim_0.long_name: "WVC row"
-dim_1.name: "WVC"
-dim_1.long_name: "WVC index"
+dim_0.name: row
+dim_0.long_name: WVC row
+dim_1.name: WVC
+dim_1.long_name: WVC index
 </textarea>
 
 <p><p>
