--- a/testsuite/nc/fnoc1.nc.lat.html
+++ b/testsuite/nc/fnoc1.nc.lat.html
@@ -384,7 +384,7 @@ units: meter per second
 long_name: Vector wind eastward component
 missing_value: -32767
 scale_factor: 0.005
-DODS_Name: "UWind"
+DODS_Name: UWind
 b: 128
 i: 32000
 WOA01: "http://localhost/junk"
@@ -430,7 +430,7 @@ units: meter per second
 long_name: Vector wind northward component
 missing_value: -32767
 scale_factor: 0.005
-DODS_Name: "VWind"
+DODS_Name: VWind
 </textarea>
 
 
