--- a/testsuite/hdf4/3B42.980909.5.HDF.html
+++ b/testsuite/hdf4/3B42.980909.5.HDF.html
@@ -309,7 +309,7 @@ function get_selection() {
     return s;
 }    
 
-DODS_URL = new dods_url("http://localhost:8080/opendap/data/hdf4/3B42.980909.5.HDF");
+DODS_URL = new dods_url("http://localhost:8080/opendap/data/hdf4/3B42.980909.5.HDF.gz");
 </script>
 <style id="antiClickjack">body{display:none !important;}</style>
 <script type="text/javascript">
@@ -340,7 +340,7 @@ DODS_URL = new dods_url("http://localhost:8080/opendap/data/hdf4/3B42.980909.5.H
 <tr>
 <td align="right"><h3><a href="opendap_form_help.html#data_url" target="help">Data URL:</a>
 </h3>
-<td><input name="url" type="text" size="70" value="http://localhost:8080/opendap/data/hdf4/3B42.980909.5.HDF">
+<td><input name="url" type="text" size="70" value="http://localhost:8080/opendap/data/hdf4/3B42.980909.5.HDF.gz">
 <tr><td><td><hr>
 
 <tr>
