--- a/hyrax_tests/ff/1998-6-avhrr.dat_RelationalConstraint01.dmr.html
+++ b/hyrax_tests/ff/1998-6-avhrr.dat_RelationalConstraint01.dmr.html
@@ -1,2 +1,2 @@
-url = http://localhost:8080/opendap/data/ff/1998-6-avhrr.dat.dmr.html?dap4.ce=GSO_AVHRR|day_num>160,day_num<162
+url = http://localhost:8080/opendap/data/ff/1998-6-avhrr.dat.dmr.html?dap4.ce%3DGSO_AVHRR%7Cday_num%3E160%2Cday_num%3C162
 -s
